# jsonschema_validator

./: README.md  main.py  pyproject.toml
src/validator/: schema.py
